// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatetimeWidget renders a date view widget component 1`] = `
<span
  className="metadata datetime widget"
>
  04 Aug 2020
</span>
`;

exports[`DatetimeWidget renders a date view widget component with children 1`] = `
<span
  className="metadata datetime widget"
>
  <strong>
    04 Aug 2020
  </strong>
</span>
`;

exports[`DatetimeWidget renders a date view widget component with custom format 1`] = `
<span
  className="metadata datetime widget"
>
  04 Aug 2020
</span>
`;

exports[`DatetimeWidget renders an empty date view widget component 1`] = `""`;
